Ticket #14948 (closed defect: fixed)

Opened 5 months ago

Last modified 5 months ago

wxGrid example autosize does not work correctly

Reported by: hackish Owned by:
Priority: normal Milestone:
Component: samples Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

I started with a fresh MSW install of 2.9.

Here are the steps to reproduce the problem:
Run the griddemo sample program (/samples/grid)
From the autosize menu select "Entire Grid"

The grid will repaint itself over the entire containing window. Since I've never had a lot of luck with sizers I can't tell if this is a defect in the sample or wxGrid.

Attachments

gridsample.jpg download (105.5 KB) - added by hackish 5 months ago.
Showing the autosize problem
README download (2.6 KB) - added by Slavon 3 months ago.
 here

Change History

Changed 5 months ago by hackish

Showing the autosize problem

Changed 5 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73343]) Re-lay out the grid sample window after auto-sizing the grid.

Changing the size of the grid without updating the sizer resulted in
overlapping windows and a mess on the display.

Closes #14948.

Changed 3 months ago by Slavon

Note: See TracTickets for help on using tickets.