Re-lay out the grid sample window after auto-sizing the grid.

Changing the size of the grid without updating the sizer resulted in
overlapping windows and a mess on the display.

Closes #14948.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73343 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775